--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ openpyxl==3.1.2
 packaging==23.2
 pandas==2.0.3
 Pillow==10.1.0
+plotly==5.18.0
 pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
@@ -19,6 +20,7 @@ scikit-learn==1.3.2
 scipy==1.10.1
 six==1.16.0
 smart-open==6.4.0
+tenacity==8.2.3
 threadpoolctl==3.2.0
 tzdata==2023.3
 zipp==3.17.0
